fixed typo in comment for swagger
