# backend/docs/swagger.json
@@ -104,10 +104,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/response.TimetableResponse"
-                            }
+                            "$ref": "#/definitions/response.TimetableResponse"
                         }
                     }
                 }
